--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,101 @@
 </head>
 
 <body>
-    
+    <header class="header">
+      <div class="header__top">
+        <div class="container">
+        <div class="header__inner">
+          <div class="header__logo">
+            <a href="#"><img src="img/logo.png" alt=""></a>
+          </div>
+
+          <div class="header__phone">
+             <span>Need help?</span> Talk to an expert: <a href="tel:61383766284">+61 3 8376 6284</a>
+          </div>
+
+          <div class="header__items">
+            <div class="header__item-basket header__item--active">
+              <span class="header__icon-circle">8</span>
+              <span class="icon-shopping-cart header__icon"></span>
+            </div>
+
+              <div class="header__btn">
+                <button class="header__login">Login</button>
+                <button class="header__registration">Register</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="header__navigation">
+        <div class="container">
+          <nav class="menu">
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">WordPress</a></li>
+              <li><a href="#">Joomla</a></li>
+              <li><a href="#">PSD</a></li>
+              <li><a href="#">Plugins</a></li>
+              <li><a href="#">Components</a></li>
+              <li><a href="#">Pages</a></li>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Help</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <!-- JS -->
