--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,8 @@
           <div class="row">
             <div class="col-3">
               <div>
-                <div class="footer__title">About Company
+                <div class="footer__title">
+                  About Company
                 </div>
                 <div class="footer__text">Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet urna iat.Praesent vel rutrum purus. 
                 </div>
@@ -75,9 +76,8 @@
                     PO Box 16122 Collins Street West 
                     Victoria 8007 Australia
                 </div>
-                <div class="footer__phone">
-                  <a href="tel:">+61 3 8376 6284</a>
-                </div>
+                <a class="footer__phone" href="tel:61383766284">+61 3 8376 6284</a>
+                </a>
               </div>
             </div>
             <div class="col-3">
