--- a/app/index.html
+++ b/app/index.html
@@ -115,11 +115,19 @@
               <div class="footer__social">
                 <ul>
                   <li>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                    <a href="#"><img src="img/social_face.png" alt=""></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="img/social_tweet.png" alt=""></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="img/social_youtube.png" alt=""></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="img/social_pinterest.png" alt=""></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="img/social_linkid.png" alt=""></a>
                   </li>
                 </ul>
               </div>
@@ -127,8 +135,8 @@
                   Newsletter Sign Up!
               </div>
               <form>
-                <input type="email">
-                <button></button>
+                <input placeholder="E-mail Address" type="email">
+                <button class="email__button"></button>
               </form>
               </div>
             </div>
